<resources>
    <string name="app_name">EmprendApp</string>

    <string name="btn_comprar">Agregar al carrito</string>
    <string name="btn_pagar">Continuar al pago</string>
    <string name="Nombre">Nombre</string>
    <string name="Apellido">Apellido</string>
    <string name="Direccion">Direccion</string>
    <string name="Ciudad">Ciudad</string>
    <string name="Guardar">Guardar</string>
    <string name="NuestrosProductos">Nuestros productos</string>
    <string name="RecomendadoDia">Recomendado del dia</string>
    <string name="Bienvenido">Bienvenido a</string>
    <string name="btn_InicioSesion">Iniciar sesión</string>
    <string name="correo">Correo electrónico</string>
    <string name="Contraseña">Contraseña</string>
    <string name="verPerfil">Editar perfil</string>
    <string name="Yogurts">Yogurt</string>
    <string name="Postres">Postres</string>
    <string name="MarLeches">Mar de leches</string>
    <string name="metodoPago">Método de pago</string>
    <string name="mensajeRegistro">¿Eres nuevo aquí? Registrate</string>
    <string name="recuperacionContra">¿Perdiste tu contraseña?</string>
    <string name="mipedido">Mi pedido</string>
    <string name="perfil">Mi perfil</string>
    <string name="registro_user">Registro usuario</string>
    <string name="title_activity_maps">Map</string>
    <string name="registrar_user">Registrar</string>
    <string name="nombre_tarjeta_credito">Nombre en la tarjeta</string>
    <string name="numero_tarjeta_credito">Numero de la tarjeta</string>
    <string name="mes_tarjeta_credito">MM</string>
    <string name="anio_tarjeta_credito">YYYY</string>
    <string name="cvv_tarjeta_credito">CVV</string>
    <string name="pagar_tarjeta_credito">PAGAR</string>





</resources>