<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".metodoPago.MetodoPagoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contLayoutSuperior"
        android:layout_width="0dp"
        android:layout_height="80dp"
        android:background="@color/colorBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/btnAtras"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorBlanco"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="?attr/actionModeCloseDrawable" />

        <ImageButton
            android:id="@+id/btnFiltros"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:background="@color/colorBlanco"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnAtras"
            app:srcCompat="@drawable/ic_filter_list" />

        <ImageButton
            android:id="@+id/btnCesta"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:background="@color/colorBlanco"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_shopping_basket" />

        <SearchView
            android:layout_width="311dp"
            android:layout_height="39dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="25dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnFiltros"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.852" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contLayoutContenido"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.156"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contLayoutSuperior">


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/contLayouyBarraNav"
        android:layout_width="0dp"
        android:layout_height="50dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contLayoutContenido"
        app:layout_constraintVertical_bias="1.0">

        <com.google.android.material.bottomnavigation.BottomNavigationView
            android:id="@+id/btnBarraNav"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:backgroundTint="@color/colorBlanco"
            app:itemIconTint="@color/colorPrimary"
            app:itemTextColor="@color/colorGris"
            app:labelVisibilityMode="auto"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:menu="@menu/btn_nav_menu" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <EditText
        android:id="@+id/id_nombre_tarjetaCredito"
        android:layout_width="274dp"
        android:layout_height="40dp"
        android:layout_marginTop="232dp"
        android:ems="10"
        android:hint="@string/nombre_tarjeta_credito"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/id_numero_tarjetaCredito"
        android:layout_width="276dp"
        android:layout_height="42dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/numero_tarjeta_credito"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.503"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_nombre_tarjetaCredito">

    </EditText>

    <EditText
        android:id="@+id/id_mes_tarjetaCredito"
        android:layout_width="76dp"
        android:layout_height="45dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:hint="@string/mes_tarjeta_credito"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_anio_tarjetaCredito"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_numero_tarjetaCredito"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/id_anio_tarjetaCredito"
        android:layout_width="76dp"
        android:layout_height="45dp"
        android:layout_marginStart="152dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/anio_tarjeta_credito"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/id_cvv_tarjetaCredito"
        app:layout_constraintHorizontal_bias="0.375"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_numero_tarjetaCredito"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/id_cvv_tarjetaCredito"
        android:layout_width="76dp"
        android:layout_height="45dp"
        android:layout_marginTop="16dp"
        android:ems="10"
        android:hint="@string/cvv_tarjeta_credito"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.8"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/id_numero_tarjetaCredito"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_registrar"
        android:layout_width="229dp"
        android:layout_height="50dp"
        android:layout_marginTop="460dp"
        android:background="@color/colorPrimary"
        android:text="@string/pagar_tarjeta_credito"
        android:textColor="@color/colorBlanco"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.428"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="pagar"
        tools:text="@string/pagar_tarjeta_credito" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="132dp"
        android:text="@string/metodoPago"
        android:textColor="@color/colorNegro"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/metodoPago" />


</androidx.constraintlayout.widget.ConstraintLayout>