<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/id_cardViewUsuario"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="10dp"
    app:cardCornerRadius="10dp"
    android:clickable="true"
    android:foreground="?android:attr/selectableItemBackground">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/id_pelfil_img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_gravity="center"
            android:background="@color/colorBlanco"
            android:scaleType="centerCrop"></ImageView>

        <TextView
            android:id="@+id/id_usuario_nombre"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="Nombre Usuario"
            android:textColor="@color/colorPrimary"
            android:textSize="15sp"
            android:textStyle="bold"></TextView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="Apellido:"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/id_apellido"
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="Huila"
                android:textColor="@color/colorNegro"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="@string/Direccion"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/id_direccion"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="Carrera 12"
                android:textColor="@color/colorNegro"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="@string/Ciudad"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/id_ciudad"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="Popayan"
                android:textColor="@color/colorNegro"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp">

            <TextView
                android:layout_width="80dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="Email"
                android:textColor="@color/colorPrimary"
                android:textSize="15sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:id="@+id/id_email"
                android:layout_width="150dp"
                android:layout_height="30dp"
                android:paddingStart="15dp"
                android:text="carlos@gmail.com"
                android:textColor="@color/colorNegro"
                android:textSize="15sp"></TextView>
        </LinearLayout>

        <Button
            android:id="@+id/id_btn_verPerfil"
            android:layout_width="150dp"
            android:layout_height="30dp"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:text="@string/verPerfil"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </LinearLayout>
</androidx.cardview.widget.CardView>